--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,7 +10,8 @@
     "migrate": "npx prisma migrate dev",
     "generate": "npx prisma generate",
     "studio": "npx prisma studio",
-    "seed": "ts-node src/scripts/seed.ts"
+    "seed": "ts-node src/scripts/seed.ts",
+    "setup:gcs": "ts-node src/scripts/setup-gcs.ts"
   },
   "keywords": [
     "video",
@@ -23,9 +24,9 @@
   "license": "MIT",
   "dependencies": {
     "@frame-brew/shared-types": "1.0.0",
+    "@google-cloud/storage": "^7.17.1",
     "@google/genai": "^1.19.0",
     "@prisma/client": "^5.20.0",
-    "aws-sdk": "^2.1691.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.3",
     "cors": "^2.8.5",
